--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 blobs/* filter=lfs diff=lfs merge=lfs -text
+blobs/file1.mono filter=lfs diff=lfs merge=lfs -text
+blobs/file2.mono filter=lfs diff=lfs merge=lfs -text
