--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 blobs/file4.mono filter=lfs diff=lfs merge=lfs -text
 blobs/file5.mono filter=lfs diff=lfs merge=lfs -text
+blobs/file6.mono filter=lfs diff=lfs merge=lfs -text
