--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 blobs/file4.mono filter=lfs diff=lfs merge=lfs -text
 blobs/file5.mono filter=lfs diff=lfs merge=lfs -text
 blobs/file6.mono filter=lfs diff=lfs merge=lfs -text
+blobs/file7.mono filter=lfs diff=lfs merge=lfs -text
